# m-learn

./: AGENTS.md  Cargo.toml  README.md
crates/draw/: Cargo.toml  README.md
crates/draw/src/: lib.rs
crates/formula/: Cargo.toml  README.md
crates/formula/src/: lib.rs
crates/optim/: Cargo.toml  README.md
crates/optim/src/: executor.rs  lib.rs  main.rs  pool.rs  task.rs
crates/tensor/: Cargo.toml  README.md
crates/tensor/src/: display.rs  lib.rs  new.rs  operator.rs  tensor.rs  tensor_macro.rs  update.rs
example/draw-example/: Cargo.toml
example/draw-example/src/: main.rs
example/formula-draw-example/: Cargo.toml
example/formula-draw-example/src/: main.rs
example/tensor-example/: Cargo.toml
example/tensor-example/src/: main.rs
